--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typeface-roboto": "^1.1.13",
+    "validator": "^13.6.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
